Fix logo overflow.

--- a/wp-content/themes/template/src/styles/components/logotyp.less
+++ b/wp-content/themes/template/src/styles/components/logotyp.less
@@ -2,5 +2,6 @@
   &__logo{
     display: block;
     margin: 0 auto;
+    max-width: 100%;
   }
 }
